# travel-agent

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  skills-lock.json
eval/: evaluate_frustration.py  evaluate_quality.py  run_queries.py  utils.py
eval/spans/: frustration_eval_results.csv  quality_eval_results.csv  raw_spans.csv
tests/: test_tools.py
travel-assistant/: DESIGN-CHANGES.md  README.md  agent.py  api.py  evaluate_frustration.py
travel-assistant/static/: index.html
travel-assistant/tools/: __init__.py  advisories.py  attractions.py  climate.py  currency.py  flights.py  geo.py  hotels.py  models.py  restaurants.py  time.py  utils.py  weather.py
