[tool.poetry]
name = "travel-assistant"
version = "0.1.0"
description = "A LangGraph travel assistant with 11 specialized tools"
authors = ["Kyle Wright <kylemoonwright@honeycomb.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
langgraph = "^0.2"
langchain = "^0.3"
langchain-community = "^0.3"
langchain-openai = "^0.2"
ddgs = "^9.0"
requests = "^2.32"
python-dotenv = "^1.0"
fastapi = "^0.115"
uvicorn = "^0.32"
arize-phoenix-otel = ">=0.16.0"
arize-phoenix-client = ">=2.6.0"
arize-phoenix-evals = ">=3.1.0"
openinference-instrumentation-langchain = "^0.1.63"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
